--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "Webpack",
     "Node"
   ],
-  "author": "aleksandr <aleksandr.orlov.dev@gmail.com>",
+  "author": "Vladimir <vlad.maruhlenko@yandex.ru>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/aAleksandrOrlov/webpack-5-config/issues"
